# gif

./: .gitignore  Cargo.toml  rust-gif.sublime-project
examples/: open_gif.rs
examples/capi/: Makefile  read_gif.c
src/: c_api.rs  c_api_utils.rs  common.rs  encoder.rs  lib.rs  traits.rs  types.rs
src/reader/: decoder.rs  mod.rs
src/writer/: encoder.rs  mod.rs
tests/: check_testimages.rs  results.txt
