[package]

name = "gif"
license = "MIT"
version = "0.2.0"
description = "GIF decoder"
authors = ["nwin <nwin@users.noreply.github.com>"]
repository = "https://github.com/nwin/gif.git"
exclude = [
    "tests/*",
]
[lib]
name = "gif"
crate-type = ["dylib", "rlib"]

[dependencies]
lzw = "0.5"
libc = "0.1"
num = "*"
enum_primitive = "*"

[dev-dependencies.image]
image = "0.3.7"

[features]
default = ["c_api", "raii_no_panic"]

raii_no_panic = []
c_api = []
