[package]

name = "gif"
license = "MIT"
version = "0.2.0"
description = "GIF decoder"
authors = ["nwin <nwin@users.noreply.github.com>"]
repository = "https://github.com/nwin/gif.git"
exclude = [
    "tests/*",
]

[lib]
name = "gif"
crate-type = ["dylib", "rlib"]

[dependencies]
lzw = "0.5"
num = "*"
enum_primitive = "*"

[dev-dependencies]
image = "0.3.7"
glob = "*"

[features]
default = ["raii_no_panic"]

raii_no_panic = []
c_api = ["libc"]

[dependencies.libc]
version = "0.1"
optional = true